--- a/L2/Labsetup/shellcode/Makefile
+++ b/L2/Labsetup/shellcode/Makefile
@@ -1,7 +1,9 @@
 
 all: 
-	gcc -m32 -z execstack -o a32.out call_shellcode.c
-	gcc -z execstack -o a64.out call_shellcode.c
+# 	gcc -m32 -z execstack -o a32.out call_shellcode.c
+	gcc -m32 -z noexecstack -o a32.out call_shellcode.c
+# 	gcc -z execstack -o a64.out call_shellcode.c
+	gcc -z noexecstack -o a64.out call_shellcode.c
 
 setuid:
 	gcc -m32 -z execstack -o a32.out call_shellcode.c
